--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,12 @@
 /* Estilos da página index.html */
 
 .bc {
-    background-color: #fab1a0;
+    background-color: #636e72;
 }
 
 .ff {
     font-family: DejaVu Sans Mono, monospace;
+    
 }
 
 .center {
